# syncler

./: .editorconfig  .gitignore  README.md  eslint.config.js  package-lock.json  package.json
sdk-python/: README.md  pyproject.toml
sdk-python/syncler/: __init__.py  bootstrap.py  broker_storage.py  client.py  crypto.py  errors.py  preview.py
sdk-python/syncler/broker/: __init__.py  app.py
sdk-python/tests/: test_bootstrap.py  test_broker_app.py  test_preview.py
server/: .env.example  README.md  alembic.ini  docker-compose.loopback.yml  docker-compose.yml  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_initial_schema.py  0002_pending_pairings.py  0003_pairing_partial_unique.py  0004_plugin_identifier.py  0005_plugin_revocation_reason.py  0006_plugin_renderer_template.py  0007_live_cards.py  0008_sender_bootstrap_key_and_pending_pairing_broker.py  0009_nonce_replay.py  0010_master_key_rotation.py  0011_per_device_encryption.py  0012_plugin_native_kotlin.py  0013_plugin_live_inbound.py  0014_card_patches.py  0015_plugin_sensitivity.py  0016_plugin_v4_21.py
server/app/: auth.py  config.py  db.py  main.py  models.py  redis_client.py  schemas.py
server/app/crypto/: __init__.py  aead.py  argon2.py  hkdf.py  hpke.py  nonce.py  signatures.py  wire.py
server/app/jobs/: retention.py
server/app/live/: __init__.py  hub.py  hub_redis.py  token_store.py  webhook.py
server/app/middleware/: __init__.py  rate_limit.py  rate_limit_config.py
server/app/routers/: auth.py  cards.py  devices.py  events.py  live.py  messages.py  (+7 more)
server/tests/: conftest.py  test_auth.py  test_crypto.py  test_db.py  test_devices.py  test_events.py  test_health.py  test_integration_auth_devices.py  test_integration_rate_limit.py  test_integration_retention.py  test_master_key_rotation.py  test_messages.py  test_migration.py  test_nonce_replay.py  test_pairing.py  test_phase11_schema.py  test_phase12_capabilities.py  test_phase3.py  test_phase5_bootstrap.py  test_phase5d_validators.py  test_phase9_hpke.py  test_phase9_recipient_classifier.py  test_plugin_assets.py  test_plugins.py  test_rate_limit.py  test_retention.py  test_senders_me_observability.py  test_state.py  test_v2_12_layouts.py  test_v3_14_connect_token.py  test_v3_14_hub.py  test_v3_14_push_frame.py  test_v3_14_webhook_public_key.py  test_v3_14_ws_endpoint.py  test_v3_17_event_id.py  test_v3_17_token_store.py  v2_helpers.py
(+875 files in other folders)
