[project]
name = "syncler-server"
version = "0.1.0"
description = "FastAPI server for Syncler"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "sqlalchemy==2.0.41",
    "alembic==1.15.2",
    "asyncpg==0.30.0",
    "pydantic==2.11.5",
    "pydantic-settings==2.9.1",
    "argon2-cffi==23.1.0",
    "cryptography==45.0.3",
    "httpx==0.28.1",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
]

[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
